--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Archery App",
+  "name": "archeryapp",
   "version": "1.0.0",
   "description": "Database and adapters",
   "main": "index.js",
